Code refactoring and JAVA doc refactor.